--- a/Day5.ipynb
+++ b/Day5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,17 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "101534\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import random\n",
     "import string\n",
@@ -30,39 +22,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "How many characters do you want in your password? (must be above 6) \n",
-      "12\n",
-      "spSMOt102802\n"
+      "--------------------------------------------------------------------------------------\n",
+      "\n",
+      "--------------------------------WELCOME TO MY PASSWORD GENERATOR----------------------\n",
+      "\n",
+      "How many letters do you want in your password? \n",
+      "3\n",
+      "How many symbols do you want in your password? \n",
+      "3\n",
+      "t_1H62A#$501\n"
      ]
     }
    ],
    "source": [
-    "numChar = input('How many characters do you want in your password? (must be above 6) \\n')\n",
-    "numChar = int(numChar)\n",
+    "#Password Generator V1\n",
+    "\n",
+    "print(\"--------------------------------------------------------------------------------------\\n\")\n",
+    "print(\"--------------------------------WELCOME TO MY PASSWORD GENERATOR----------------------\\n\")\n",
     "specialChar = string.punctuation\n",
-    "stringChars = string.ascii_letters\n",
-    "pwd = []\n",
+    "stringChar = string.ascii_letters\n",
+    "symbol = string.punctuation\n",
     "now = datetime.now()\n",
-    "PWD1 =   ''.join(random.choice(stringChars) for i in range(numChar-6)) \n",
-    "#PWD2 =  ''.join(random.choice(specialChar) for i in range(1)) \n",
-    "PWD3 = current_time = now.strftime(\"%H%M%S\")\n",
-    "randomPwd = PWD1 + str(PWD3)\n",
-    "print(randomPwd)"
+    "currentTime = now.strftime(\"%H%M%S\")\n",
+    "\n",
+    "\n",
+    "numLetters = int(input(f\"How many letters do you want in your password? \\n\"))\n",
+    "numSym = int(input(f\"How many symbols do you want in your password? \\n\"))\n",
+    "#numbers = int(input(f\"How many numbers do you want in your password? \\n\"))\n",
+    "\n",
+    "pwd1 = ''.join(random.choice(stringChar) for i in range(numLetters))\n",
+    "pwd2 = ''.join(random.choice(symbol) for i in range(numSym) )\n",
+    "pwd3 = ''.join(currentTime)\n",
+    "finalPwd = pwd1+pwd2+str(pwd3)\n",
+    "finalPwd = list(finalPwd)\n",
+    "random.shuffle(finalPwd)\n",
+    "#print(finalPwd)\n",
+    "finalPwd2 = ''.join(str(i) for i in finalPwd)\n",
+    "print(finalPwd2)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### "
+   ]
   }
  ],
  "metadata": {
